--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-lazy-card": "^0.1.8",
     "react-lazy-load-image-component": "^1.5.5",
     "react-lazyload": "^3.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-modal": "^3.15.1",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-skeleton": "^2.2.1",
     "react-slideshow-image": "^4.0.4",
     "react-to-print": "^2.14.7",
     "react-toastify": "^9.0.8",
